remove not needed configuration entry for mock annotation

--- a/src/main/resources/needle.properties
+++ b/src/main/resources/needle.properties
@@ -5,4 +5,4 @@ mock.provider = de.akquinet.jbosscc.needle.mock.MockitoProvider
 #
 # Inject mocks in @Mock
 #
-custom.injection.annotations = org.mockito.Mock,de.akquinet.jbosscc.needle.annotation.Mock
+custom.injection.annotations = org.mockito.Mock
