--- a/pom.xml
+++ b/pom.xml
@@ -1,129 +1,129 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.holisticon.toolbox</groupId>
-    <artifactId>needle-mockito</artifactId>
-    <version>1.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+	<groupId>de.holisticon.toolbox</groupId>
+	<artifactId>needle-mockito</artifactId>
+	<version>1.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
 
-    <description>Please refer to https://github.com/holisticon/needle-mockito/.</description>
-    <url>https://github.com/holisticon/needle-mockito/</url>
+	<description>Please refer to https://github.com/holisticon/needle-mockito/.</description>
+	<url>https://github.com/holisticon/needle-mockito/</url>
 
-    <properties>
-        <java.version>1.6</java.version>
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
+	<properties>
+		<java.version>1.6</java.version>
+		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+		<maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
 
-        <needle.version>2.2</needle.version>
-        <junit-mockito.version>1.0</junit-mockito.version>
-        <h2.version>1.3.170</h2.version>
-    </properties>
+		<needle.version>2.2</needle.version>
+		<junit-mockito.version>1.0</junit-mockito.version>
+		<h2.version>1.3.170</h2.version>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>de.holisticon.dependencies</groupId>
-            <artifactId>junit-mockito</artifactId>
-            <version>${junit-mockito.version}</version>
-            <type>pom</type>
-        </dependency>
-        <dependency>
-            <groupId>de.akquinet.jbosscc</groupId>
-            <artifactId>jbosscc-needle</artifactId>
-            <version>${needle.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-web-6.0</artifactId>
-            <version>2.0.0.Final</version>
-            <type>pom</type>
-            <exclusions>
-                <exclusion>
-                    <artifactId>xalan</artifactId>
-                    <groupId>org.apache.xalan</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.6.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>de.holisticon.dependencies</groupId>
+			<artifactId>junit-mockito</artifactId>
+			<version>${junit-mockito.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>de.akquinet.jbosscc</groupId>
+			<artifactId>jbosscc-needle</artifactId>
+			<version>${needle.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.version}</version>
+		</dependency>
+		<dependency>
+		   <groupId>javax</groupId>
+		   <artifactId>javaee-api</artifactId>
+		   <version>6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-    <organization>
-        <name>Holisticon AG</name>
-        <url>http://www.holisticon.de/</url>
-    </organization>
+	<organization>
+		<name>Holisticon AG</name>
+		<url>http://www.holisticon.de/</url>
+	</organization>
 
-    <developers>
-        <developer>
-            <name>Jan Galinski</name>
-            <email>jan.galinski@holisticon.de</email>
-            <organization>holisticon AG</organization>
-            <organizationUrl>http://holisticon.de/</organizationUrl>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<name>Jan Galinski</name>
+			<email>jan.galinski@holisticon.de</email>
+			<organization>holisticon AG</organization>
+			<organizationUrl>http://holisticon.de/</organizationUrl>
+		</developer>
+		<developer>
+			<name>Simon Zambrovski</name>
+			<email>simon.zambrovski@holisticon.de</email>
+			<organization>holisticon AG</organization>
+			<organizationUrl>http://holisticon.de/</organizationUrl>
+		</developer>
+	</developers>
 
-    <licenses>
-        <license>
-            <name>Revised BSD License</name>
-            <url>
+	<licenses>
+		<license>
+			<name>Revised BSD License</name>
+			<url>
                 http://en.wikipedia.org/wiki/BSD_licenses#3-clause_license_.28.22Revised_BSD_License.22.2C_.22New_BSD_License.22.2C_or_.22Modified_BSD_License.22.29
             </url>
-            <comments>s. license.txt</comments>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+			<comments>s. license.txt</comments>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <inceptionYear>2013</inceptionYear>
+	<inceptionYear>2013</inceptionYear>
 
-    <issueManagement>
-        <url>https://github.com/holisticon/needle-mockito/issues</url>
-        <system>GitHub Issues</system>
-    </issueManagement>
+	<issueManagement>
+		<url>https://github.com/holisticon/needle-mockito/issues</url>
+		<system>GitHub Issues</system>
+	</issueManagement>
 
-    <scm>
-        <connection>scm:git:https://github.com/holisticon/needle-mockito.git</connection>
-        <developerConnection>scm:git:https://github.com/holisticon/needle-mockito.git</developerConnection>
-        <url>scm:git:https://github.com/holisticon/needle-mockito.git</url>
-        <tag>HEAD</tag>
-    </scm>
+	<scm>
+		<connection>scm:git:https://github.com/holisticon/needle-mockito.git</connection>
+		<developerConnection>scm:git:https://github.com/holisticon/needle-mockito.git</developerConnection>
+		<url>scm:git:https://github.com/holisticon/needle-mockito.git</url>
+		<tag>HEAD</tag>
+	</scm>
 
-    <build>
-        <defaultGoal>clean install</defaultGoal>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${maven-deploy-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<defaultGoal>clean install</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${maven-deploy-plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
